new card added folder name is beach

--- a/Book/book.html
+++ b/Book/book.html
@@ -14,15 +14,13 @@
         <h2>Rexona</h2>
         <p><span class="name">Author </span> : Jhony Dipp</p>
         <p class="description">
-          "Lorem" ipsum dolor, sit amet consectetur adipisicing elit. Fugit quam
-          dolorumexercitationem hic accusamus dicta quia officia incidunt
+          "Lorem" ipsum dolor, sit amet consectur adsicing elit. Fugit quam
+          dolor umexer citation hic accusamus dicta quia officia incidunt
           maiores.
         </p>
         <p class="muted-text">Publish date : 26/8/2020</p>
       </div>
-      <div class="card-image">
-        <img src="" alt="" />
-      </div>
+      <div class="card-image"></div>
     </div>
   </body>
 </html>
