--- a/Music/music.html
+++ b/Music/music.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="music.css">
 <div class="container">
     <div class="box">
         <div class="image"></div>
