fast food card added

--- a/CSS-Snippets/Book/book.html
+++ b/CSS-Snippets/Book/book.html
@@ -20,7 +20,12 @@
         </p>
         <p class="muted-text">Publish date : 26/8/2020</p>
       </div>
-      <div class="card-image"></div>
+      <div class="card-image">
+        <img
+          src="https://images.unsplash.com/photo-1532012197267-da84d127e765?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1yZWxhdGVkfDE4fHx8ZW58MHx8fHw%3D&auto=format&fit=crop&w=500&q=60"
+          alt=""
+        />
+      </div>
     </div>
   </body>
 </html>
