burger card added

--- a/CSS-Snippets/Season/index.html
+++ b/CSS-Snippets/Season/index.html
@@ -21,14 +21,23 @@
         <div class="card">
           <div class="card-image">
             <img
-              src="https://images.unsplash.com/photo-1632203171982-cc0df6e9ceb4?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=528&q=80"
+              src="https://images.unsplash.com/photo-1511803471753-da23b1a92d4b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
               alt=""
             />
           </div>
           <div class="card-content">
-            <span>DELICIOUS TASTE</span>
-            <p>Lorem ipsum dolor sit, adip elit.</p>
-            <a href="">Order Now</a>
+            <span>December/08/20</span>
+            <h2>WINTER</h2>
+            <div class="card-text">
+              <p>
+                Lorem ipsum, dolor sit amet consectetur elit. Sit excepturi.
+                Error autem iure laborum, iste ea libero earum nihil saepe
+                mollitia! excepturi laborum!
+              </p>
+              <div class="card-button">
+                <a href="">Read more →</a>
+              </div>
+            </div>
           </div>
         </div>
       </div>
