--- a/CSS-Snippets/football/index.html
+++ b/CSS-Snippets/football/index.html
@@ -21,14 +21,12 @@
         <div class="card">
           <div class="card-image">
             <img
-              src="https://images.unsplash.com/photo-1632203171982-cc0df6e9ceb4?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=528&q=80"
-              alt=""
+              src="https://images.unsplash.com/photo-1560272564-c83b66b1ad12?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=449&q=80"
+              alt="card-image"
             />
           </div>
           <div class="card-content">
-            <span>DELICIOUS TASTE</span>
-            <p>Lorem ipsum dolor sit, adip elit.</p>
-            <a href="">Order Now</a>
+            <a href="">WATCH LIVE</a>
           </div>
         </div>
       </div>
