Dubai folder added

--- a/CSS-Snippets/Skils/index.html
+++ b/CSS-Snippets/Skils/index.html
@@ -13,19 +13,35 @@
       rel="stylesheet"
     />
   </head>
+
   <body>
     <div class="main-container">
       <div class="card-container">
         <!-- Card Started -->
         <div class="card">
-          <div class="card-image">
-            <img
-              src="https://images.unsplash.com/photo-1560272564-c83b66b1ad12?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=449&q=80"
-              alt="card-image"
-            />
-          </div>
-          <div class="card-content">
-            <a href="">WATCH LIVE</a>
+          <div class="card-images">
+            <h2>SKILLS</h2>
+            <div class="html">
+              <img
+                src="https://cdn.pixabay.com/photo/2017/08/05/11/16/logo-2582748_960_720.png"
+                alt=""
+              />
+              <h6>85%</h6>
+            </div>
+            <div class="css">
+              <img
+                src="https://cdn.pixabay.com/photo/2017/08/05/11/16/logo-2582747_960_720.png"
+                alt=""
+              />
+              <h6>50%</h6>
+            </div>
+            <div class="git">
+              <img
+                src="https://cdn.pixabay.com/photo/2017/08/05/11/24/logo-2582757_960_720.png"
+                alt=""
+              />
+              <h6>25%</h6>
+            </div>
           </div>
         </div>
       </div>
