--- a/CSS-Snippets/Transparent/index.html
+++ b/CSS-Snippets/Transparent/index.html
@@ -19,20 +19,16 @@
       <div class="card-container">
         <!-- Card Started -->
         <div class="card">
-          <div class="card-body">
-            <div class="card-image">
-              <img
-                src="https://pngimg.com/uploads/car_crash/small/car_crash_PNG51.png"
-                alt="card-image"
-              />
+          <div class="card-image">
+            <img src="" alt="" />
+          </div>
+          <div class="card-content">
+            <div class="card-text">
+              <h2>TRANSPARENT</h2>
+              <p>Lorem, ipsum dolor sit amet. Odio inventore non esse!</p>
             </div>
-            <div class="card-content">
-              <span>DRIVE SAFE</span>
-              <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h2>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Accusamus eligendi harum animi aut, ex est quo!
-              </p>
+            <div class="card-button">
+              <a href="">Visit</a>
             </div>
           </div>
         </div>
