--- a/CSS-Snippets/Bottle/index.html
+++ b/CSS-Snippets/Bottle/index.html
@@ -13,6 +13,7 @@
       rel="stylesheet"
     />
   </head>
+
   <body>
     <div class="main-container">
       <div class="card-container">
@@ -20,12 +21,22 @@
         <div class="card">
           <div class="card-image">
             <img
-              src="https://images.unsplash.com/photo-1560272564-c83b66b1ad12?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=449&q=80"
-              alt="card-image"
+              class="first"
+              src="https://images.unsplash.com/photo-1618354691490-0de58a2c4c93?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwcm9maWxlLXBhZ2V8Mzd8fHxlbnwwfHx8fA%3D%3D&auto=format&fit=crop&w=500&q=60"
+              alt=""
             />
+            <!-- <img
+              class="second"
+              src="https://images.unsplash.com/photo-1618354691249-18772bbac3a5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwcm9maWxlLXBhZ2V8MzZ8fHxlbnwwfHx8fA%3D%3D&auto=format&fit=crop&w=500&q=60"
+              alt=""
+            /> -->
           </div>
           <div class="card-content">
-            <a href="">WATCH LIVE</a>
+            <span>W-BOOTLE</span>
+            <div class="card-button">
+              <p>$2</p>
+              <a href="">BUY</a>
+            </div>
           </div>
         </div>
       </div>
