--- a/CSS-Snippets/Dubai/index.html
+++ b/CSS-Snippets/Dubai/index.html
@@ -13,6 +13,7 @@
       rel="stylesheet"
     />
   </head>
+
   <body>
     <div class="main-container">
       <div class="card-container">
@@ -20,12 +21,26 @@
         <div class="card">
           <div class="card-image">
             <img
-              src="https://images.unsplash.com/photo-1560272564-c83b66b1ad12?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=449&q=80"
-              alt="card-image"
+              src="https://images.unsplash.com/photo-1459788025731-a85eb8dd27cc?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80"
+              alt=""
             />
           </div>
+          <ul>
+            <li><a href="">B</a></li>
+            <li><a href="">U</a></li>
+            <li><a href="">R</a></li>
+            <li><a href="">J</a></li>
+          </ul>
           <div class="card-content">
-            <a href="">WATCH LIVE</a>
+            <div class="card-text">
+              <h3>DUBAI</h3>
+              <p>
+                Lorem ipsum deserunt iste omnis quaerat dolor sit amet
+                consectetur erat adipisicing quaerat tem pore elit. Impedit erat
+                deserunt omnis qua erat tempore facilis eveniet!
+                <a href="">Visit</a>
+              </p>
+            </div>
           </div>
         </div>
       </div>
