--- a/CSS-Snippets/Social media/index.html
+++ b/CSS-Snippets/Social media/index.html
@@ -13,19 +13,26 @@
       rel="stylesheet"
     />
   </head>
+
   <body>
     <div class="main-container">
       <div class="card-container">
         <!-- Card Started -->
         <div class="card">
-          <div class="card-image">
+          <div class="card-image-content">
             <img
-              src="https://images.unsplash.com/photo-1560272564-c83b66b1ad12?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=449&q=80"
-              alt="card-image"
+              src="https://images.unsplash.com/photo-1555949963-ff9fe0c870eb?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
+              alt=""
             />
+            <span>SOFTWARE</span>
           </div>
-          <div class="card-content">
-            <a href="">WATCH LIVE</a>
+          <div class="card-detail">
+            <h3>Software Alert</h3>
+            <p class="card-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere
+              cumque cum fugit aliquam!
+            </p>
+            <a href="">Read More →</a>
           </div>
         </div>
       </div>
