--- a/CSS-Snippets/Xbox/index.html
+++ b/CSS-Snippets/Xbox/index.html
@@ -13,6 +13,7 @@
       rel="stylesheet"
     />
   </head>
+
   <body>
     <div class="main-container">
       <div class="card-container">
@@ -20,12 +21,18 @@
         <div class="card">
           <div class="card-image">
             <img
-              src="https://images.unsplash.com/photo-1560272564-c83b66b1ad12?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=449&q=80"
-              alt="card-image"
+              src="https://images.unsplash.com/photo-1636531141047-0bfe943d29ad?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
+              alt=""
             />
           </div>
           <div class="card-content">
-            <a href="">WATCH LIVE</a>
+            <h2>X-BOX</h2>
+            <p>
+              Lorem ipsum dolor, sit amet consec tetur adipis icing elit. Dolo
+              rem nesciunt laboriosam, voluptatibus eos ducimus mollitia ab
+              modi.
+              <a href="">Read more →</a>
+            </p>
           </div>
         </div>
       </div>
