--- a/free-frontend/Blog-post/index.html
+++ b/free-frontend/Blog-post/index.html
@@ -13,21 +13,20 @@
       rel="stylesheet"
     />
   </head>
+
   <body>
     <div class="main-container">
       <div class="card-container">
         <!-- Card Started -->
-        <div class="card">
-          <div class="card-image">
-            <img
-              src="https://images.unsplash.com/photo-1560272564-c83b66b1ad12?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=449&q=80"
-              alt="card-image"
-            />
+        <div class="cards">
+          <div class="card card-1">
+            <div class="card__icon"><i class="fas fa-bolt"></i></div>
+            <p class="card__exit"><i class="fas fa-times"></i></p>
+            <h2 class="card__title">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h2>
+            <p class="card__apply">
+              <a class="card__link" href="#">Apply Now <i class="fas fa-arrow-right"></i></a>
+            </p>
           </div>
-          <div class="card-content">
-            <a href="">WATCH LIVE</a>
-          </div>
-        </div>
       </div>
     </div>
   </body>
