simple folder added

--- a/CSS-Snippets/Diamond/index.html
+++ b/CSS-Snippets/Diamond/index.html
@@ -13,6 +13,7 @@
       rel="stylesheet"
     />
   </head>
+
   <body>
     <div class="main-container">
       <div class="card-container">
@@ -20,12 +21,16 @@
         <div class="card">
           <div class="card-image">
             <img
-              src="https://cdn.pixabay.com/photo/2013/07/13/10/51/football-157930_960_720.png"
-              alt="card-image"
+              src="https://cdn.pixabay.com/photo/2018/05/18/00/04/diamond-3410040_960_720.png"
+              alt=""
             />
           </div>
           <div class="card-content">
-            <a href="">WATCH LIVE</a>
+            <div class="card-text">
+              <h6>SHAPE OF DIAMOND</h6>
+              <a href="">Mobile single sign-on made easy <span>→</span></a>
+              <p>Lorem ipsum dolor sit amet conse ctetur, adipisicing elit!</p>
+            </div>
           </div>
         </div>
       </div>
