--- a/CSS-Snippets/Hamburger/index.html
+++ b/CSS-Snippets/Hamburger/index.html
@@ -13,22 +13,13 @@
       rel="stylesheet"
     />
   </head>
+
   <body>
-    <div class="main-container">
-      <div class="card-container">
-        <!-- Card Started -->
-        <div class="card">
-          <div class="card-image">
-            <img
-              src="https://cdn.pixabay.com/photo/2013/07/13/10/51/football-157930_960_720.png"
-              alt="card-image"
-            />
-          </div>
-          <div class="card-content">
-            <a href="">WATCH LIVE</a>
-          </div>
-        </div>
-      </div>
-    </div>
+    <label for="checkbox" class="hamburger">
+      <input type="checkbox" id="checkbox" />
+      <span class="line line-top"></span>
+      <span class="line line-middle"></span>
+      <span class="line line-bottom"></span>
+    </label>
   </body>
 </html>
