--- a/CSS-Snippets/Simple/index.html
+++ b/CSS-Snippets/Simple/index.html
@@ -13,19 +13,29 @@
       rel="stylesheet"
     />
   </head>
+
   <body>
     <div class="main-container">
       <div class="card-container">
         <!-- Card Started -->
         <div class="card">
-          <div class="card-image">
-            <img
-              src="https://cdn.pixabay.com/photo/2013/07/13/10/51/football-157930_960_720.png"
-              alt="card-image"
-            />
-          </div>
           <div class="card-content">
-            <a href="">WATCH LIVE</a>
+            <a href="">
+              <p>
+                ENGINEER: Lorem ipsum dolor, sit amet consectetur adipisicing
+                elit. Quibusdam!
+              </p>
+            </a>
+            <div class="muted-text">2020</div>
+            <div class="card-detail">
+              <div class="card-image">
+                <img
+                  src="https://images.unsplash.com/photo-1504257432389-52343af06ae3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80"
+                  alt=""
+                />
+              </div>
+              <span class="name">ENGR. KHALID AL BALUSHI</span>
+            </div>
           </div>
         </div>
       </div>
