daisy folder added

--- a/CSS-Snippets/Daisy/index.html
+++ b/CSS-Snippets/Daisy/index.html
@@ -18,9 +18,22 @@
     <div class="main-container">
       <div class="card-container">
         <!-- Card Started -->
-        <div class="text-animation">
-          <span style="--delay: 0.8s">Text</span>
-          <span style="--delay: 1s">Animation</span>
+        <div class="card">
+          <div class="card-background">
+            <div class="card-content">
+              <h3>DAISY</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit!</p>
+              <div class="content-detail">
+                <div class="content-image">
+                  <img
+                    src="https://cdn.pixabay.com/photo/2019/08/06/00/46/black-and-white-4387130_960_720.jpg"
+                    alt=""
+                  />
+                </div>
+                <span>Cr. Abid Chakar</span>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
