--- a/CSS-Snippets/Hunza/index.html
+++ b/CSS-Snippets/Hunza/index.html
@@ -20,16 +20,19 @@
         <!-- Card Started -->
         <div class="card">
           <div class="card-image">
-            <img src="" alt="" />
+            <img
+              src="https://images.unsplash.com/photo-1592298285277-64da3dc70efb?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=464&q=80"
+              alt=""
+            />
+            <div class="card-image">
+            <!-- <img
+              src="https://images.unsplash.com/photo-1592298483937-d76c1a24dbca?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=507&q=80"
+              alt=""
+            /> -->
           </div>
           <div class="card-content">
-            <div class="card-text">
-              <h2>TRANSPARENT</h2>
-              <p>Lorem, ipsum dolor sit amet. Odio inventore non esse!</p>
-            </div>
-            <div class="card-button">
-              <a href="">Visit</a>
-            </div>
+            <h2>HUNZA</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos reprehenderit eius aliquam iusto!</p>
           </div>
         </div>
       </div>
