--- a/CSS-Snippets/Shoe/index.html
+++ b/CSS-Snippets/Shoe/index.html
@@ -21,18 +21,22 @@
         <div class="card">
           <div class="card-image">
             <img
-              src="https://images.unsplash.com/photo-1636531141047-0bfe943d29ad?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
+              src="https://png2.cleanpng.com/sh/77f8cbd0bb1cce9771f8a78378a8baf5/L0KzQYm3V8A4N6ZtfZH0aYP2gLBuTf5qc5Yyedt7LX3kiH7oigIucpD3fNN3LYPxdbLyhgJ0NZJpgdZqcz3kecO0iv9zbJJzRadrNEG0RIe6gvFkbWc5RqoBMEa2SIaCUcU0OGoASak6NUe5RYO1kP5o/kisspng-nike-air-max-air-jordan-sneakers-adidas-air-jordan-5b411463bace64.8606385915309917157652.png"
               alt=""
             />
           </div>
+          <div class="card-content-bk"></div>
           <div class="card-content">
-            <h2>X-BOX</h2>
-            <p>
-              Lorem ipsum dolor, sit amet consec tetur adipis icing elit. Dolo
-              rem nesciunt laboriosam, voluptatibus eos ducimus mollitia ab
-              modi.
-              <a href="">Read more →</a>
-            </p>
+            <div class="content-logo">
+              <img
+                src="https://png2.cleanpng.com/sh/699c45f4d8221b47fa378f2ad16972bf/L0KzQYm3V8A1N5hxepH0aYP2gLBuTfp2daFyedC2YXn1Pbv2kvRidl5zgd1uLXToc7LzTfxwb5CyTdQ8Y3bpdoaCgvZnaWkzTqY7NEK5QoW4VcMxP2M5S6Y6NkO8PsH1h5==/kisspng-jumpman-air-jordan-nike-decal-logo-5b3cfff59bffa8.642426241530724341639.png"
+                alt=""
+              />
+            </div>
+            <div class="content-title">
+              <h3>Brand</h3>
+              <a href="">BUY</a>
+            </div>
           </div>
         </div>
       </div>
